--- a/_includes/bio-nav.html
+++ b/_includes/bio-nav.html
@@ -1,7 +1,7 @@
-<li class="icon-email"><a href="mailto:icemancast@gmail.com" data-toggle-tooltip="tooltip" title="icemancast@gmail">Email</a></li>
-<li class="icon-phone"><a data-toggle="modal" data-toggle-tooltip="tooltip" href="#my-digits" title="(210) 595-0499">Phone</a></li>
-<li class="icon-github"><a href="https://github.com/icemancast" data-toggle-tooltip="tooltip" title="/icemancast">Github</a></li>
-<li class="icon-linkedin"><a href="http://www.linkedin.com/profile/view?id=18871848" data-toggle-tooltip="tooltip" title="Linkedin">Linkedin</a></li>
-<li class="icon-googleplus"><a href="https://plus.google.com/104205610870262290545/posts" data-toggle-tooltip="tooltip" title="Google+">Google Plus</a></li>
-<li class="icon-twitter"><a href="https://twitter.com/icemancast" data-toggle-tooltip="tooltip" title="@icemancast">Twitter</a></li>
+<li class="icon-email"><a href="mailto:{{ site.email }}" data-toggle-tooltip="tooltip" title="icemancast@gmail">Email</a></li>
+<li class="icon-phone"><a data-toggle="modal" data-toggle-tooltip="tooltip" href="#my-digits" title="{{ site.data.personal.phone }}">Phone</a></li>
+<li class="icon-github"><a href="https://github.com/{{ site.github_username }}" data-toggle-tooltip="tooltip" title="/{{ site.github_username }}">Github</a></li>
+<li class="icon-linkedin"><a href="http://www.linkedin.com/profile/{{ site.data.personal.linkedin }}" data-toggle-tooltip="tooltip" title="Linkedin">Linkedin</a></li>
+<li class="icon-googleplus"><a href="https://plus.google.com/{{ site.data.personal.google_plus }}/posts" data-toggle-tooltip="tooltip" title="Google+">Google Plus</a></li>
+<li class="icon-twitter"><a href="https://twitter.com/{{ site.twitter_username }}" data-toggle-tooltip="tooltip" title="@{{ site.twitter_username }}">Twitter</a></li>
 <li class="icon-me"><a data-toggle="modal" href="#about-me" data-toggle-tooltip="tooltip" title="About Me">About Me</a></li>
