broke out about to its own page

--- a/_includes/bio-nav.html
+++ b/_includes/bio-nav.html
@@ -4,4 +4,4 @@
 <li class="icon-linkedin"><a href="http://www.linkedin.com/profile/{{ site.data.personal.linkedin }}" data-toggle-tooltip="tooltip" title="Linkedin">Linkedin</a></li>
 <li class="icon-googleplus"><a href="https://plus.google.com/{{ site.data.personal.google_plus }}/posts" data-toggle-tooltip="tooltip" title="Google+">Google Plus</a></li>
 <li class="icon-twitter"><a href="https://twitter.com/{{ site.twitter_username }}" data-toggle-tooltip="tooltip" title="@{{ site.twitter_username }}">Twitter</a></li>
-<li class="icon-me"><a data-toggle="modal" href="#about-me" data-toggle-tooltip="tooltip" title="About Me">About Me</a></li>
+<li class="icon-me"><a href="/about" data-toggle-tooltip="tooltip" title="About Me">About Me</a></li>
